# libsql-client-dotnet

./: .gitignore  LICENSE  README.md  devbox.json  docker-compose.yaml  generate-bindings.sh  generate_bindings.sh  justfile  libsql-client-dotnet.sln  shell.nix  test-performance.sh
.github/workflows/: build-dependencies.yaml  publish.yaml  test.yaml
Demo/: Demo.csproj  Program.cs
Libsql.Client/: DatabaseClient.cs  DatabaseClientOptions.cs  DatabaseType.cs  DatabaseWrapper.cs  Error.cs  IDatabaseClient.cs  IResultSet.cs  IStatement.cs  Libsql.Client.csproj  LibsqlException.cs  ResultSet.cs  ResultSetExtensions.cs  Rows.cs  Statement.cs  StatementWrapper.cs  Value.cs  WebDatabaseClient.cs
Libsql.Client.Test/: Libsql.Client.Test.csproj  RowsTests.cs  SelectTests.cs
Libsql.Client.Tests/: DatabaseClientTests.cs  DatabaseContainer.cs  EmbeddedReplicaTests.cs  ExecuteTests.cs  Libsql.Client.Tests.csproj  PositionalArgumentTests.cs  RemoteTests.cs  ResultSetTests.cs  RowsTests.cs  SelectTests.cs  StatementTests.cs  chinook.db
Libsql.Client.Tests.Performance/: Libsql.Client.Tests.Performance.csproj  Program.cs  RowReads.cs
Libsql.Client.Tests/ValueEquality/: BlobTests.cs  IntegerTests.cs  NullTests.cs  RealTests.cs  TextTests.cs
Libsql.Client/Extensions/: CustomMarshal.cs  libsql_row_tExtensions.cs  libsql_rows_tExtensions.cs
Libsql.Client/Values/: Blob.cs  Integer.cs  Null.cs  Real.cs  Text.cs  Value.cs
LibsqlClient/: BindingsResultSetExtensions.cs  ByteBuffer.cs  Class1.cs  Client.cs  DatabaseClient.cs  DatabaseClientOptions.cs  DatabaseType.cs  DatabaseWrapper.cs  Error.cs  GroupedNativeMethods.cs  IDatabaseClient.cs  LibsqlClient.csproj  ResultSet.cs  ResultSetExtensions.cs  Rows.cs  Value.cs  WebDatabaseClient.cs
LibsqlClient.Test/: LibsqlClient.Test.csproj  RowsTests.cs  SelectTests.cs
LibsqlClient/Extensions/: StringExtensions.cs  libsql_row_tExtensions.cs  libsql_rows_tExtensions.cs
rust-bindings/: .gitignore  Cargo.toml  build.rs
rust-bindings/csharp-bindings/: Cargo.toml  build.rs
rust-library/: Cargo.toml  build.rs
rust-library/src/: byte_buffer.rs  client.rs  lib.rs  rows_iterator.rs
turso-docker/: Dockerfile  build-and-publish.sh
