[workspace]
members = [
    "csharp-bindings",
    "libsql/bindings/c"
]

[workspace.dependencies]
rusqlite = { package = "libsql-rusqlite", path = "libsql/vendored/rusqlite", version = "0.29", default-features = false, features = [
    "libsql-experimental",
    "column_decltype",
    "load_extension",
    "modern_sqlite",
    "functions",
] }
