[workspace]
members = [
    "csharp-bindings",
    "libsql/bindings/c"
]

[workspace.dependencies]
rusqlite = { package = "libsql-rusqlite", path = "libsql/vendored/rusqlite", version = "0.33", default-features = false, features = [
    "libsql-experimental",
    "column_decltype",
    "load_extension",
    "modern_sqlite",
    "functions",
    "limits",
    "hooks",
] }
hyper = { version = "0.14" }
tower = { version = "0.4.13" }
zerocopy = { version = "0.7.32", features = ["derive", "alloc"] }
