[package]
name = "csharp-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]
path = "../libsql/bindings/c/src/lib.rs"

[build-dependencies]
csbindgen = "1.2.0"

[dependencies]
sql-experimental = { path = "../libsql/bindings/c" }
libsql = { path = "../libsql/libsql" }
lazy_static = "1.4.0"
tokio = { version = "1.29.1", features = [ "rt-multi-thread" ] }
