[package]
name = "csharp-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]
path = "../libsql/bindings/c/src/lib.rs"
doc = false

[build-dependencies]
csbindgen = "1.9.5"

[dependencies]
bytes = "1.5.0"
lazy_static = "1.4.0"
tokio = { version = "1.29.1", features = [ "rt-multi-thread" ] }
hyper-rustls = { version = "0.25", features = ["webpki-roots"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
http = "1.1.0"
anyhow = "1.0.86"
libsql = { path = "../libsql/libsql", features = ["encryption"] }
